--- a/notebooks/loops.Rmd
+++ b/notebooks/loops.Rmd
@@ -11,7 +11,7 @@ date: "`r Sys.Date()`"
 }
 </style>
 
-# Set Up
+# Dependencies + Load data
 
 ```{r knitr}
 library(knitr)
@@ -41,9 +41,6 @@ source(file.path(SCRIPT_DIR, 'loops/utils.loops.R'))
 library(tidyverse)
 library(magrittr)
 ```
-
-# Load Loop Annotations
-
 Using the default params we only keep loops < 2Mb in size, which is enough to capture most CTCF-associated loops in human cells. The loop calling params are explained in the [cooltools docs](https://cooltools.readthedocs.io/en/latest/notebooks/dots.html#Dot-calling-with-default-parameters):
 
 - A set of convolution kernels are recommended based on the resolution of clr, if user-defined convolution kernels are not provided (i.e. kernels=None).
@@ -56,33 +53,15 @@ Using the default params we only keep loops < 2Mb in size, which is enough to ca
 Load all cooltools loop annotations, only keep 1 kernel (donut)
 ```{r load_loops}
 # this is applied to the donut kernel, but all loops are significant with
-# all kernels if sig with donut kernel
-q.thresh <- 0.1 
 loops.df <- 
     check_cached_results(
-        results_file=COOLTOOLS_LOOPS_RESULTS_FILE,
+        results_file=ALL_COOLTOOLS_LOOPS_RESULTS_FILE,
         # force_redo=TRUE,
         results_fnc=load_all_cooltools_dots
     ) %>%
     post_process_cooltools_dots_results() %>% 
-    filter(weight == 'balanced') %>% 
-    # filter(resolution == 10000) %>% 
     filter(kernel == 'donut') %>% 
-    filter(log10.qval > -log10(q.thresh)) %>% 
     standardize_data_cols()
-```
-Load annotation data
-```{r load_annotation_data}
-# chr.sizes.df <- load_chr_sizes()
-# functional.annotations.df <- load_functional_annotations()
-# annotations.df <- 
-#     FUNCTIONAL_ANNOTATION_FILES %>%
-#     {.[1]} %>%
-#     read_tsv()
-# annotations.df
-# abcs.df <- 
-#     ABC_ANNOTATIONS_FILE %>%
-#     read_tsv()
 ```
 
 # Number of Loops {.tabset}
@@ -208,8 +187,6 @@ n.loops.per.chr.df %>%
 Plot size distribution of loops
 ```{r plot_loop_size_violin, results='asis', fig.dim=c(10,6)}
 loops.df %>% 
-    # filter(kernel == 'donut') %>% 
-    # filter(resolution == '25Kb') %>% filter(weight == 'raw') %>% 
     make_nested_plot_tabs(
         # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
         group.cols=c('weight', 'resolution'),
@@ -263,7 +240,7 @@ loops.df %>%
 # Manhattan Plots {.tabset}
 
 Make manhattan plot with q-values
-```{r manhattan_plot, results='asis', fig.dim=c(10,6)}
+```{r manhattan_plot, results='asis', fig.dim=c(10,6), eval=FALSE}
 loops.df %>% 
     make_nested_plot_tabs(
         # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
@@ -337,380 +314,10 @@ loops.df %>%
     )
 ```
 
-# IDR2D Analysis  {.tabset}
+# Save Filtered Loop Results
 
-```{r load_idr2d}
-# Generate IDR2D results for all comparisons of sample groups
-idr2d.results.df <- 
-    check_cached_results(
-        results_file=LOOPS_IDR2D_RESULTS_FILE,
-        # force_redo=TRUE,
-        results_fnc=load_all_IDR2D_results
-    ) %>% 
-    # filter(weight == 'balanced') %>%
-    # filter(resolution == 10000) %>% 
-    # filter(resolve.method == 'value') %>% 
-    # filter(metric == 'log10.qval') %>% 
-    mutate(comparison=glue('{SampleID.P1} vs {SampleID.P2}')) %>% 
-    mutate(
-        is.loop.shared=
-            case_when(
-                loop.type == 'P1.only' ~ loop.type,
-                loop.type == 'P2.only' ~ loop.type,
-                IDR <= 0.1             ~ 'IDR < 0.1',
-                IDR <= 1               ~ 'Irreproducible',
-                TRUE                   ~ NA
-            )
-    ) %>%
-    standardize_data_cols()
+```{r save_filtered_results}
+loops.df %>% 
+    filter_loop_results() %>% 
+    write_tsv(FILTERED_COOLTOOLS_LOOPS_RESULTS_FILE)
 ```
-
-## Compare resolving strategies + metrics {.tabset}
-
-```{r idr2d_hyperparams_heatmap, results='asis', fig.dim=c(10,6), eval=FALSE}
-idr2d.results.df %>% 
-    count(
-        weight, resolution, kernel,
-        resolve.method, metric,
-        comparison, 
-        # SampleID.P1, SampleID.P2,
-        # chr,
-        is.loop.shared
-    ) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=3,
-        # group.cols=c('resolution', 'comparison'),
-        # group.cols=c('weight', 'resolution', 'kernel'),
-        group.cols=c('weight', 'resolution'),
-        # plot.fnc=plot_density,
-        plot.fnc=plot_heatmap,
-        x.var='metric',
-        y.var='resolve.method',
-        fill.var='n',
-        label.var='n',
-        facet.row='is.loop.shared',
-        facet.col='comparison',
-        scales='fixed',
-        legend.position='right',
-        fill.scale.mode='m',
-        strip.text=element_text(size=10),
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-## Reproducible loops Heatmaps {.tabset}
-
-### Genome-Wide
-
-```{r idr2d_hyperparams_boxplot_gw, results='asis', fig.dim=c(8,8)}
-idr2d.results.df %>% 
-    filter(resolve.method == 'value') %>% 
-    filter(metric == 'log10.qval') %>% 
-    count(
-        weight, resolution, kernel,
-        # resolve.method, metric,
-        comparison, 
-        SampleID.P1, SampleID.P2,
-        # chr,
-        is.loop.shared
-    ) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=4,
-        group.cols=c('weight', 'resolution'),
-        plot.fnc=plot_heatmap,
-        y.var='comparison',
-        x.var='is.loop.shared',
-        fill.var='n',
-        label.var='n',
-        label.size=5,
-        # facet.group='chr',
-        # facet.ncol=6,
-        # facet.row='SampleID.P1',
-        # facet.col='SampleID.P2',
-        scales='fixed',
-        legend.position='right',
-        fill.scale.mode='m',
-        strip.text=element_text(size=10),
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-### Per Chr
-
-```{r idr2d_hyperparams_boxplot_chr, results='asis', fig.dim=c(10,6)}
-idr2d.results.df %>% 
-    filter(resolve.method == 'value') %>% 
-    filter(metric == 'log10.qval') %>% 
-    count(
-        weight, resolution, kernel,
-        # resolve.method, metric,
-        comparison, 
-        SampleID.P1, SampleID.P2,
-        chr,
-        is.loop.shared
-    ) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=4,
-        group.cols=c('weight', 'resolution'),
-        plot.fnc=plot_heatmap,
-        y.var='comparison',
-        x.var='is.loop.shared',
-        fill.var='n',
-        label.var='n',
-        label.size=3,
-        facet.group='chr',
-        facet.ncol=6,
-        # facet.row='SampleID.P1',
-        # facet.col='SampleID.P2',
-        scales='fixed',
-        legend.position='right',
-        fill.scale.mode='m',
-        strip.text=element_text(size=10),
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-## Reproducible loops Barplot {.tabset}
-
-### Genome-Wide
-
-```{r idr2d_hyperparams_barplot_gw, results='asis', fig.dim=c(10,8)}
-idr2d.results.df %>% 
-    filter(resolve.method == 'value') %>% 
-    filter(metric == 'log10.qval') %>% 
-    count(
-        weight, resolution, kernel,
-        # resolve.method, metric,
-        comparison, 
-        SampleID.P1, SampleID.P2,
-        # chr,
-        is.loop.shared
-    ) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=4,
-        group.cols=c('weight', 'resolution'),
-        plot.fnc=plot_barplot,
-        x.var='is.loop.shared',
-        y.var='n',
-        fill.var='comparison',
-        facet.row='Celltype',
-        # facet.group='chr',
-        # facet.ncol=6,
-        # facet.row='SampleID.P1',
-        # facet.col='SampleID.P2',
-        scales='fixed',
-        legend.position='right',
-        y.scale.mode='m',
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-### Per Chr
-
-```{r idr2d_hyperparams_barplot_chr, results='asis', fig.dim=c(10,6)}
-idr2d.results.df %>% 
-    filter(resolve.method == 'value') %>% 
-    filter(metric == 'log10.qval') %>% 
-    count(
-        weight, resolution, kernel,
-        # resolve.method, metric,
-        comparison, 
-        SampleID.P1, SampleID.P2,
-        chr,
-        is.loop.shared
-    ) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=4,
-        group.cols=c('weight', 'resolution'),
-        plot.fnc=plot_heatmap,
-        x.var='chr',
-        y.var='n',
-        fill.var='comparison',
-        facet.row='Celltype',
-        scales='fixed',
-        legend.position='right',
-        y.scale.mode='m',
-        strip.text=element_text(size=10),
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-# Compare Expression of Genes to Loops
-
-Load expression data
-```{r load_expr_and_map_to_loops, eval=FALSE}
-expression.df <- 
-    load_gene_expression_data() %>%
-    filter(feature == "protein_coding") %>% 
-    # pivot_longer(
-    #     starts_with('TPM.'),
-    #     names_to='metric',
-    #     values_to='value',
-    # ) %>% 
-    # pivot_wider(
-    #     names_from=SampleID,
-    #     values_from=value
-    # ) %>% 
-    select(-c(feature))
-loop.expr.df <- 
-    idr2d.results.df %>% 
-    filter(resolve.method == 'value') %>% 
-    filter(metric == 'log10.qval') %>% 
-    select(-c(metric, resolve.method)) %>% 
-    join_expr_and_IDR2D_results(expression.df) %>% 
-    select(
-        -c(
-            # comparison,
-            diff.value, diff.rank, 
-            loop.type,
-            # metric, resolve.method
-            # IDR, is.loop.shared
-        )
-    )
-# rm(expression.df)
-```
-
-## Plot expression of genes between loops  {.tabset}
-
-```{r plot_expr_of_loops, results='asis', fig.dim=c(10,6), eval=FALSE}
-# tmp <- 
-#     idr2d.results.df %>% 
-#     filter(resolve.method == 'overlap') %>% 
-#     filter(metric == 'log10.qval') %>% 
-#     filter(weight == 'balanced', resolution == '10Kb', kernel == 'donut') %>% 
-#     count(chr, is.loop.shared, SampleID.P1, SampleID.P2) %>% 
-#     pivot_wider(names_from=is.loop.shared, values_from=n)
-# tmp %>% filter(chr == 'chr16')
-# tmp %>% filter(chr %in% c('chr10', 'chr16'))
-loop.expr.df %>% 
-    filter(weight == 'balanced', resolution == '10Kb', kernel == 'donut') %>% 
-    filter(TPM.mean < 200) %>% 
-    filter(TPM.mean > 50) %>% 
-    make_nested_plot_tabs(
-        max.header.lvl=3,
-        group.cols=c('weight', 'resolution', 'comparison'),
-        plot.fnc=plot_boxplot,
-        # x.var='chr',
-        x.var='is.loop.shared',
-        x.scale.mode='discrete',
-        y.var='TPM.mean',
-        fill.var='SampleID',
-        # fill.var='SampleID',
-        fill.scale.mode='discrete',
-        # label.var='',
-        # facet.group='chr',
-        # facet.ncol=6,
-        # facet.row='is.loop.shared',
-        # facet.col='is.loop.shared',
-        scales='free_y',
-        legend.position='right',
-        # fill.scale.mode='m',
-        strip.text=element_text(size=10),
-        axis.text.x=element_text(angle=45, hjust=1),
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank()
-    )
-```
-
-## Find differential genes
-
-# Compare Loops across Genotypes {.tabset}
-
-## Plot anchor differences boxplot {.tabset}
-
-```{r plot_compare_anchors_boxplot, results='asis', fig.dim=c(10,6), eval=FALSE}
-diff.df %>% 
-    # filter(!metric %in% c('start', 'end', 'length')) %>% 
-    filter(metric %in% c('length', 'enrichment', 'log10_qval')) %>% 
-    mutate(diff=abs(diff)) %>% 
-    make_nested_plot_tabs(
-        group.cols=c('weight', 'resolution'),
-        max.header.lvl=3,
-        plot.fnc=plot_boxplot,
-        x.var='chr',
-        y.var='diff',
-        fill.var='SampleID',
-        facet.row='metric',
-        x.scale.mode='discrete',
-        scales='free_y',
-        legend.position='top',
-        axis.title.x=element_blank(),
-        strip.text=element_text(size=20),
-        axis.text.x=element_text(angle=45, hjust=1)
-    )
-```
-
-## Plot anchor differences scatter {.tabset}
-
-```{r plot_compare_anchors_scatter, results='asis', fig.dim=c(10,6), eval=FALSE}
-diff.df %>% 
-    # filter(metric %in% c(start, end, length)) %>% 
-    # filter(!metric %in% c('start', 'end', 'length')) %>% 
-    filter(metric %in% c('enrichment', 'log10_qval')) %>% 
-    make_nested_plot_tabs(
-        group.cols=c('weight', 'resolution'),
-        max.header.lvl=3,
-        plot.fnc=plot_jitter,
-        x.var='P1',
-        y.var='P2',
-        color.var='SampleID',
-        # facet.row='metric',
-        facet.group='metric',
-        facet.ncol=1,
-        scales='free',
-        size=0.75,
-        legend.position='top',
-        axis.title.x=element_blank(),
-        axis.title.y=element_blank(),
-        strip.text=element_text(size=20),
-        axis.text.x=element_text(angle=45, hjust=1)
-    )
-```
-
-## Plot Anchor MoCs {.tabset}
-
-```{r plot_compare_anchors_MoC, results='asis', fig.dim=c(10,6), eval=FALSE}
-similarity.df %>% 
-    # select(-c(ends_with('diff'))) %>% 
-    group_by(weight, resolution, chr, kernel, SampleID) %>%
-    summarize(MoC=(sum(moc.inner) - 1) * unique(MoC.norm)) %>% 
-    ungroup() %>% 
-    make_nested_plot_tabs(
-        # group.cols=c('type', 'isMerged', 'weight', 'resolution'),
-        group.cols=c('weight', 'resolution'),
-        max.header.lvl=3,
-        plot.fnc=plot_barplot,
-        x.var='chr',
-        y.var='MoC',
-        # color.var='Genotype',
-        # shape.var='Genotype',
-        # x.var='Genotype',
-        fill.var='SampleID',
-        # facet.col='chr',
-        # facet.row='context',
-        x.scale.mode='discrete',
-        # y.scale.mode='mb',
-        # scales='free_y',
-        # size=0.25,
-        legend.position='top',
-        axis.title.x=element_blank(),
-        axis.text.x=element_text(angle=45, hjust=1)
-    )
-```
-
-# Plot against genome annotations
-
-## Plot loops against CTCF sites
-
-## Plot against CNVs?
-
