--- a/notebooks/Matrix.QC.Rmd
+++ b/notebooks/Matrix.QC.Rmd
@@ -30,7 +30,7 @@ Set up file locations + load dependencies
 ```{r dependencies, eval=TRUE}
 library(here)
 library(kableExtra)
-here::i_am('notebooks/matrix.QC.Rmd')
+here::i_am('notebooks/Matrix.QC.Rmd')
 BASE_DIR <- here()
 source(file.path(BASE_DIR, 'scripts', 'locations.R'))
 source(file.path(SCRIPT_DIR, 'utils.data.R'))
