--- a/notebooks/HiCRep.Rmd
+++ b/notebooks/HiCRep.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(
 Load dependenies
 ```{r dependencies}
 library(here)
-here::i_am('notebooks/hicrep.Rmd')
+here::i_am('notebooks/HiCRep.Rmd')
 BASE_DIR <- here()
 SCRIPT_DIR <- here('scripts')
 source(file.path(BASE_DIR, 'scripts/locations.R'))
